# windows-ai-sandbox

./: .dockerignore  .gitignore  .trivyignore.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LICENSE  README.md  REPO-SCAN_in-transit_audit-and-housekeeping.md  SECURITY_ASSESSMENT.md  agent_repo_conventions_advice.md  claude_internal_audit_macolima.md  docker-bench-security-report.md  docker-compose.wsl-gpu.yml  docker-compose.yml  docker_wsl2_setup.md  docker_wsl2_setup.sh  google-ai-explain-setup-2.txt  google-ai-explain-setup.txt  justfile  nohup.out  numerai-setup.md  ohmyzsh-host-setup.sh  ohmyzsh-setup.sh  rootless-docker-full-setup.sh  rootless-docker-wsl-setup-guide.md  rootless_docker_guide.md  sandbox-hardening-package.md  scratch.ipynb  seccomp.json  setup-01-install-docker-engine.sh  setup-02-config-rootless.sh  setup-rootless-docker-wsl.sh  wsl-dbus-hack.sh  wsl_rootless_docker_full.sh
.devcontainer/: .p10k.zsh  .zshrc  Dockerfile  GPU-FIX-MIGRATION.md  ROOTLESS-DOCKER-NOTES.md  devcontainer.json  dockerfile_user_testing  entrypoint.sh  health_server.py  ohmyzsh-container-setup.sh  set-git-global.sh
archived_script_ref/: depreciated_wsl_rootless_docker_full.sh
config/: .zshrc  claude-settings.json
container_testing/: AGENTS.md  cuda_test.ipynb  environment.yml  pyproject.toml
dashboard/: AGENTS.md  README.md  pyproject.toml
devcontainer-template/: devcontainer.json
docs/: compose-network-ipam.md  debug-recipes.md  deny-destructive-hook-plan.md  handoff-to-macolima-subnet-allocator.md  index.md  local-wheels.md  permissions-model.md  (+8 more)
(+64 files in other folders)
